edited my title
edited my title to match my name.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<title></title>
 </head>
 <body>
-<div class="about-me">
-   <h1>About me<h1>
+<div class="Henry-Ramirez">
+   <h1>Henry Ramirez<h1>
 </body>
 </html>
 
