--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
             <li><a href="#">One more separated link</a></li>
           </ul>
         </li>
-      </ul>
-    
+      </ul>	
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
         <li class="dropdown">
@@ -63,7 +62,7 @@
    <div class="row">
    <h1>add pic</h1>
     <div class="col-xs-10">about-me</div>
-    <div class="col-xs-2">test</div>
+    <div class="col-xs-2">about-me images projects  </div>
 
    </div>
   </div>
