--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
@@ -6,66 +6,31 @@
 <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-<header>
-<nav class="navbar navbar-inverse" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
+ <div class="container">
+  <p> ALL ABOUT ME!! </p>
+  <div class="row">
+    <div class="col-xs-10">
+      <h1>Hello my name is henry and im a 
+      computer programmer at PHS. This is my 
+      second year in computer science. I joined a 
+      a program at PHS called App Academy and 
+      this is the second time I've built a website even though i dont really consider the first time a website.
+      </h1>
     </div>
+     <div class="col-xs-2">
+       <nav class"listed-group">
+        <a href="#" class="list-group-item">About me</a>
+        <a href="#" class="list-group-item">Images</a>
+         <a href="#" class="list-group-item">Projects</a>
+         
+       </nav>
+     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>	
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
   </div>
-</nav>
-</header>
-  <div class="container">
-   <h1>about me</h1>
-   <div class="row">
-   <h1>add pic</h1>
-    <div class="col-xs-10">about-me</div>
-    <div class="col-xs-2">about-me images projects  </div>
-
-   </div>
-  </div>
+ </div>
 </body>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"> </script>
 </html>
+
 
