--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-<body>
+ <head>
+   <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+   <link rel="stylesheet" type="text/css" href="css/main.css">
+ </head>
+  <body>
  <div class="container">
   <p> ALL ABOUT ME!! </p>
   <div class="row">
@@ -14,7 +14,8 @@
       computer programmer at PHS. This is my 
       second year in computer science. I joined a 
       a program at PHS called App Academy and 
-      this is the second time I've built a website even though i dont really consider the first time a website.
+      this is the second time I've built a website even 
+      though i dont really consider the first time a website.
       </h1>
     </div>
      <div class="col-xs-2">
@@ -24,10 +25,10 @@
          <a href="#" class="list-group-item">Projects</a>   
        </nav>
      </div>
-
   </div>
+
  </div>
-</body>
+  </body>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"> </script>
 </html>
