--- a/index.html
+++ b/index.html
@@ -58,20 +58,10 @@
   <p> ALL ABOUT ME!! </p>
   <div class="row">
     <div class="col-xs-10">
-      <h1>Hello my name is henry and im a 
-      computer programmer at PHS. This is my 
-      second year in computer science. I joined a 
-      a program at PHS called App Academy and 
-      this is the second time I've built a website even 
-      though i dont really consider the first time a website.
+      <h1>Hello my name is Henry and im a computer programmer at PHS. This is my   second year in computer science. I joined a program at PHS called App Academy and this is the second time I've built a website even though i dont really consider the first time a website. This is my website about me so fell free to look at it.
       </h1>
     </div>
      <div class="col-xs-2">
-       <nav class"listed-group-item">
-        <a href="#" class="list-group-item">About me</a>
-        <a href="#" class="list-group-item">Images</a>
-        <a href="#" class="list-group-item">Projects</a>   
-       </nav>
      </div>
   </div>
  </div>
