--- a/index2.html
+++ b/index2.html
@@ -4,11 +4,12 @@
    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" href="css/main2.css">
+   <link rel="stylesheet" type="text/css" href="js/main2.js">
    <link href='http://fonts.googleapis.com/css?family=Monda|Ultra' rel='stylesheet' type='text/css'>
 </head>
 <body>
  <div id="nav_wrap">
-    <h1 id="logo">LOGO</h1>
+    <h1 id="logo">About ME</h1>
     <nav role='navigation'>
       <a href="#" id="home">Home</a><!--
       --><a href="#" id="about">About</a><!--
@@ -23,7 +24,7 @@
   
   <section id="homesec" class="">
     <div id="mainlogo">
-      LOGO<br />
+      About me<br />
       <div id="mainsocial">
         <div class="icon-facebook-sign"></div>
         <div class="icon-twitter-sign"></div>  
@@ -72,7 +73,7 @@
           
         </section>
 </body>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"> </script>
 </html>
 
