--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
       </h1>
     </div>
      <div class="col-xs-2">
+      <a href="#" class="listed-group-item">
+       <a href="#" class="list-group-item">About Me</a>
+       <a href="#" class="list-group-item">Images</a>
+       <a href="#" class="list-group-item">Projects</a>
+      </a>
      </div>
   </div>
  </div>
