--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
      <div class="col-xs-2">
       <a href="#" class="listed-group-item">
-       <a href="#" class="list-group-item">About Me</a>
+       <a href="../webpage/index2.html" class="list-group-item">About Me</a>
        <a href="#" class="list-group-item">Images</a>
        <a href="#" class="list-group-item">Projects</a>
       </a>
