--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <p> ALL ABOUT ME!! </p>
   <div class="row">
     <div class="col-xs-10">
-      <h1>Hello my name is Henry and im a computer programmer at PHS. This is my   second year in computer science. I joined a program at PHS called App Academy and this is the second time I've built a website even though i dont really consider the first time a website. This is my website about me so fell free to look at it.
+      <h1>Hello my name is Henry and I'm a computer programmer at PHS. This is my  second year in computer science. I joined a program at PHS called App Academy and this is the second time I've built a website even though i dont really consider the first time a website. This is my website about me so fell free to look at it.
       </h1>
     </div>
      <div class="col-xs-2">
