--- a/index2.html
+++ b/index2.html
@@ -6,31 +6,54 @@
    <link rel="stylesheet" type="text/css" href="css/main2.css">
    <link rel="stylesheet" type="text/css" href="js/main2.js">
    <link href='http://fonts.googleapis.com/css?family=Monda|Ultra' rel='stylesheet' type='text/css'>
-</head>
-<body>
- <div id="nav_wrap">
-    <h1 id="logo">logo</h1>
-    <nav role='navigation'>
-      <a href="../webpage/index.html" id="home">Home</a><!--
-      --><a href="#" id="about">About Me</a><!--
-      --><a href="#" id="clients">What i can do</a><!--
-      --><a href="#" id="contact">Contact Us</a>
-    </nav>  
-    <div id="social">
-      <div class="icon-facebook-sign"></div>
-      <div class="icon-twitter-sign"></div>
-    </div><!--/social-->
-  </div><!--/nav_wrap-->
-  
-  <section id="homesec" class="">
-    <div id="mainlogo">
-      Hello<br />
-      <div id="mainsocial">
-        <div class="icon-facebook-sign"></div>
-        <div class="icon-twitter-sign"></div>  
-      </div>
+  <nav class="navbar navbar-inverse" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Tool Bar</a>
     </div>
-  </section><!--/home-->
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link</a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="../webpage/index.html">Home</a></li>
+        <li><a href="#">About me</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
   
   <section id="aboutsec" class="bodysec">
     <div id="copy">
@@ -39,7 +62,7 @@
         <p>Hello!!! My name is Henry and I'm 15. If you were at my front page u probably know that alrdy. Anyway I go to Pasadena High School. I'm a sophmore and a second year coder. I was born in glendale california, raised in glendale for 5 years, moved to Tucson Arizona, then, lived there for 5 years, and finally, moved back to California. Did u catch all of that. I currently have been living in Pasadena for about 5 years and no I dont think im moving anywhere else anytime soon. My best subject in school is math. I like alot things about highschool and theres still alot for me to learn out there. When it comes to hobbies, I'm a bit of a weirdo(lol). I like to ride my bike(fixie), I love to watch anime(forget real tv), and I play lots of videogames(I'm sure every teenager plays videogames). <p></div>
         </section> 
 </body>
+  <script type="text/javascript" src"js/main2,js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"> </script>
 </html>
-
