--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
       </h1>
     </div>
      <div class="col-xs-2">
-      <a href="#" class="listed-group-item">
+      <a href="#" class="listed-group">
        <a href="../webpage/index2.html" class="list-group-item">About Me</a>
        <a href="#" class="list-group-item">Images</a>
        <a href="#" class="list-group-item">Projects</a>
+       <a href="#" class="list-group-item">Contact me</a>
       </a>
      </div>
   </div>
