--- a/index2.html
+++ b/index2.html
@@ -59,7 +59,11 @@
     <div id="copy">
       <h1>About me</h1>
       <img src="images/Kingdom_Hearts_Characters.jpg" class="right">
-        <p>Hello!!! My name is Henry and I'm 15. If you were at my front page u probably know that alrdy. Anyway I go to Pasadena High School. I'm a sophmore and a second year coder. I was born in glendale california, raised in glendale for 5 years, moved to Tucson Arizona, then, lived there for 5 years, and finally, moved back to California. Did u catch all of that. I currently have been living in Pasadena for about 5 years and no I dont think im moving anywhere else anytime soon. My best subject in school is math. I like alot things about highschool and theres still alot for me to learn out there. When it comes to hobbies, I'm a bit of a weirdo(lol). I like to ride my bike(fixie), I love to watch anime(forget real tv), and I play lots of videogames(I'm sure every teenager plays videogames). <p></div>
+        <p>Hello!!! My name is Henry and I'm 15. If you were at my front page u probably know that alrdy. Anyway I go to Pasadena High School. I'm a sophmore and a second year coder. I was born in glendale california, raised in glendale for 5 years, moved to Tucson Arizona, then, lived there for 5 years, and finally, moved back to California. Did u catch all of that. I currently have been living in Pasadena for about 5 years and no I dont think im moving anywhere else anytime soon. My best subject in school is math. I like alot things about highschool and theres still alot for me to learn out there. When it comes to hobbies, I'm a bit of a weirdo(lol). I like to ride my bike(fixie), I love to watch anime(forget real tv), and I play lots of videogames(I'm sure every teenager plays videogames). The games I like to play are mmorpg,rpg,firstperson-shooter,thirdperson-shooter,etc, I just play a game that I enjoy. <p>
+       <p>
+       	The subjects I'm best at in school are probably math, computer science(duhh!!), and spanish.
+       </p>
+        </div>
         </section> 
 </body>
   <script type="text/javascript" src"js/main2,js"></script>
