--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
  <head>
    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
@@ -24,18 +23,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Link</a></li>
         <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
+        \''
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="../webpage/index.html">Home</a></li>
@@ -71,6 +59,7 @@
   </div>
  </div>
   </body>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"> </script>
 </html>
