--- a/index2.html
+++ b/index2.html
@@ -66,7 +66,7 @@
         </div>
         </section> 
 </body>
-  <script type="text/javascript" src"js/main2,js"></script>
+  <script type="text/javascript" src"js/main2.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"> </script>
 </html>
