--- a/Images.html
+++ b/Images.html
@@ -2,6 +2,8 @@
 <head>
    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+   <link rel="stylesheet" type="text/css" href="css/main3.css">
+   <link rel="stylesheet" type="text/css" href="js/main3.js">
      <nav class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
