--- a/Images.html
+++ b/Images.html
@@ -25,6 +25,8 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="../webpage/index.html">Home</a></li>
+          <li><a href="../webpage/index2.html">About Me</a></li>
+            <li><a href="../webpage/images.html">Images</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
