--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="../webpage/index.html">Home</a></li>
+        <li><a href="../webpage/index2.html">About Me</a></li>
+          <li><a href="../webpage/images.html">Images</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -51,7 +53,7 @@
      <div class="col-xs-2">
       <a href="#" class="listed-group">
        <a href="../webpage/index2.html" class="list-group-item">About Me</a>
-       <a href="#" class="list-group-item">Images</a>
+       <a href="../webpage/images.html"class="list-group-item">Images</a>
        <a href="#" class="list-group-item">Projects</a>
        <a href="#" class="list-group-item">Contact me</a>
       </a>
