--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="../webpage/index.html">Home</a></li>
         <li><a href="#">About me</a></li>
+            <li><a href="../webpage/images.html">Images</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
