--- a/Images.html
+++ b/Images.html
@@ -16,7 +16,6 @@
       </button>
       <a class="navbar-brand" href="#">Tool Bar</a>
     </div>
-
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
@@ -43,5 +42,37 @@
 </nav>
    </head>
 <body>
+<div>
+		<input checked id="one" name="multiples" type="radio" value="1">
+        <label for="one">1</label>
+		<input id="two" name="multiples" type="radio" value="2">
+        <label for="two">2</label>
+        <input id="three" name="multiples" type="radio" value="3">
+        <label for="three">3</label>
+        <input id="four" name="multiples" type="radio" value="4">
+        <label for="four">4</label>
+        <input id="five" name="multiples" type="radio" value="5">
+        <label for="five">5</label>
+        <input id="six" name="multiples" type="radio" value="6">
+        <label for="six">6</label>
+        <input id="seven" name="multiples" type="radio" value="7">
+        <label for="seven">7</label>
+        <input id="eight" name="multiples" type="radio" value="8">
+        <label for="eight">8</label>
+		<div class="container">
+			<div class="carousel">
+				<img src="../webpage/images/shu-x-inori.png" alt="Landscape 1">
+				<img src="../webpage/images/kH3.jpg" alt="Landscape 2">
+				<img src="images/3.jpg" alt="Landscape 3">
+				<img src="images/4.jpg" alt="Landscape 4">
+				<img src="images/5.jpg" alt="Landscape 5">
+				<img src="images/6.jpg" alt="Landscape 6">
+				<img src="images/7.jpg" alt="Landscape 7">
+				<img src="images/8.jpg" alt="Landscape 8">
+			</div>
+		</div>
+	</div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"> </script>
 </body>
 </html>
