--- a/Images.html
+++ b/Images.html
@@ -4,6 +4,7 @@
    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" href="css/main3.css">
    <link rel="stylesheet" type="text/css" href="js/main3.js">
+   <meta name="viewport" content="width=device-width, intial-scale=1.0">
      <nav class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
