--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 </nav>
  </head>
   <body>
-  
+  <div class="container">
+    <img src="../webpage/images/shu-x-inori">
+  </div>
  <div class="container">
   <p> ALL ABOUT ME!! </p>
   <div class="row">
