--- a/Images.html
+++ b/Images.html
@@ -64,8 +64,8 @@
 			<div class="carousel">
 				<img src="../webpage/images/shu-x-inori.png" alt="Landscape 1">
 				<img src="../webpage/images/kH3.jpg" alt="Landscape 2">
-				<img src="images/3.jpg" alt="Landscape 3">
-				<img src="images/4.jpg" alt="Landscape 4">
+				<img src="../webpage/images/DSCN8362.JPG" alt="Landscape 3">
+				<img src="../webpage/images/DSCN8363.JPG" alt="Landscape 4">
 				<img src="images/5.jpg" alt="Landscape 5">
 				<img src="images/6.jpg" alt="Landscape 6">
 				<img src="images/7.jpg" alt="Landscape 7">
