--- a/Images.html
+++ b/Images.html
@@ -66,10 +66,10 @@
 				<img src="../webpage/images/kH3.jpg" alt="Landscape 2">
 				<img src="../webpage/images/DSCN8362.JPG" alt="Landscape 3">
 				<img src="../webpage/images/DSCN8363.JPG" alt="Landscape 4">
-				<img src="images/5.jpg" alt="Landscape 5">
-				<img src="images/6.jpg" alt="Landscape 6">
-				<img src="images/7.jpg" alt="Landscape 7">
-				<img src="images/8.jpg" alt="Landscape 8">
+				<img src="../webpage/images/shu-and-gang.jpg" alt="Landscape 5">
+				<img src="../webpage/images/zelda-twp.jpg" alt="Landscape 6">
+				<img src="images/sao.jpg" alt="Landscape 7">
+				<img src="images/toradora.jpg" alt="Landscape 8">
 			</div>
 		</div>
 	</div>
