--- a/Images.html
+++ b/Images.html
@@ -68,11 +68,12 @@
 				<img src="../webpage/images/DSCN8363.JPG" alt="Landscape 4">
 				<img src="../webpage/images/shu-and-gang.jpg" alt="Landscape 5">
 				<img src="../webpage/images/zelda-twp.jpg" alt="Landscape 6">
-				<img src="images/sao.jpg" alt="Landscape 7">
-				<img src="images/toradora.jpg" alt="Landscape 8">
+				<img src="../webpage/images/sao.jpg" alt="Landscape 7">
+				<img src="../webpage/images/toradora.jpg" alt="Landscape 8">
 			</div>
 		</div>
 	</div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"> </script>
 </body>
+</html>
