--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" href="css/main.css">
-     <nav class="navbar navbar-inverse" role="navigation">
+     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -15,7 +15,6 @@
       </button>
       <a class="navbar-brand" href="#">Tool Bar</a>
     </div>
-
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
@@ -42,8 +41,6 @@
 </nav>
  </head>
   <body>
-  <div class="container">
-
   </div>
  <div class="container">
   <p> ALL ABOUT ME!! </p>
