--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" type="text/css" href="css/main2.css">
    <link rel="stylesheet" type="text/css" href="js/main2.js">
    <link href='http://fonts.googleapis.com/css?family=Monda|Ultra' rel='stylesheet' type='text/css'>
-  <nav class="navbar navbar-inverse" role="navigation">
+  <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
