--- a/Images.html
+++ b/Images.html
@@ -82,7 +82,7 @@
   2. This pictures is a from my favorite videogame i played as a child. the name of the game is called Kingdom Hearts(KH for short) and its just amazing. If i could i would talk alot about the game and probably would have fill this page with just Kh but i would have bored with with that.
   </p>
   <p>
-  	3. This the picture of me and my friends a few yaers ago of us at Six Flags. I remember that day as if it was a few days ago. I had a great time that day and i hope to go again soon with them. I'm the one in the middle with the blue shorts and shades and spenders.
+  	3. This the picture of me and my friends a few years ago of us at Six Flags. I remember that day as if it was a few days ago. I had a great time that day and i hope to go again soon with them. I'm the one in the middle with the blue shorts and shades and spenders.
   </p>
 
 </div>
