--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" href="css/main.css">
+   <meta name="viewport" content='width=320'>
      <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -18,8 +19,6 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="" id="">Link</a></li>
-        <li><a href="#">Link</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="../webpage/index.html">Home</a></li>
