--- a/Images.html
+++ b/Images.html
@@ -5,7 +5,8 @@
    <link rel="stylesheet" type="text/css" href="css/main3.css">
    <link rel="stylesheet" type="text/css" href="js/main3.js">
    <meta name="viewport" content="width=device-width, intial-scale=1.0">
-     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+   <meta name="viewport" content='width=320'>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -15,13 +16,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Tool Bar</a>
+      <a class="navbar-brand" href="#">Menu</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="../webpage/index.html">Home</a></li>
