--- a/Images.html
+++ b/Images.html
@@ -4,7 +4,7 @@
    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" href="css/main3.css">
    <link rel="stylesheet" type="text/css" href="js/main3.js">
-   <meta name="viewport" content="width=device-width, intial-scale=1.0">
+   <meta name="viewport" content="width=device-width">
    <meta name="viewport" content='width=320'>
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
   <div class="container-fluid">
@@ -72,8 +72,6 @@
 			</div>
 		</div>
 	</div>
-
-<div class="container" class="left">
  <p>
   1. The first pic is from a series I finished awhile ago. Its called guilty crown and its one of the best anime series i have seen in the past 3 years I've watched anime.
   </p>
@@ -81,13 +79,12 @@
   2. This pictures is a from my favorite videogame i played as a child. the name of the game is called Kingdom Hearts(KH for short) and its just amazing. If i could i would talk alot about the game and probably would have fill this page with just Kh but i would have bored with with that.
   </p>
   <p>
-  	3. This the picture of me and my friends a few years ago of us at Six Flags. I remember that day as if it was a few days ago. I had a great time that day and i hope to go again soon with them. I'm the one in the middle with the blue shorts and shades and spenders.
+  	3. This the picture of me and my friends a few years ago of us at Six Flags. I remember that day as if it was a few days ago. I had a great time that day and i hope to go again soon with them. I'm the one in the middle with the blue shorts and shades and suspenders.
   </p>
   <p>
   	
   </p>
 
-</div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"> </script>
 </body>
