--- a/Images.html
+++ b/Images.html
@@ -24,8 +24,9 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="../webpage/index.html">Home</a></li>
-          <li><a href="../webpage/index2.html">About Me</a></li>
-            <li><a href="../webpage/images.html">Images</a></li>
+        <li><a href="../webpage/index2.html">About Me</a></li>
+        <li><a href="../webpage/images.html">Images</a></li>
+        <li><a href="../webpage/Contact-Me.html">Contact Me</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
