--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" href="css/main.css">
+   <meta name="viewport" content="width=device-width">
    <meta name="viewport" content='width=320'>
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
   <div class="container-fluid">
